--- a/.classpath
+++ b/.classpath
@@ -13,6 +13,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/Users/perez/Downloads/servlet.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mguitec/OneDrive - Universidad Mariano Gálvez/Escritorio/servlet.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
